# linked_list

./: Makefile  README.rst  pyproject.toml
.github/workflows/: github-actions-demo.yml
linked_list/: double_linked_list.py  doubly_linked_list.py
tests/: test_dll.py
