[tool.poetry]
name = "stanislavglazko_linked_list"
version = "0.1.0"
description = ""
authors = ["Stas Glazko <stanislavglazko@gmail.com>"]
packages = [{ include = "linked_list" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
